fixed html template

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
 
             <div class="mb-4">
-                <label for="model" class="block text-gray-700 font-bold mb-2">
+                <label for="transcription_model" class="block text-gray-700 font-bold mb-2">
                     Transcription Model
                 </label>
                 <select 
